Fixed newsletter text alignment on mobile devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,6 +70,9 @@ body{
 }
 
 .newsletter {
+  @media (max-width: 767px) {
+    text-align: center;
+  }
   .form-control {
     width: 60%;
     @media (max-width: 1200px) {
